--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-name: Hank Quinlan, Horrible Cop
+name: June Lee
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
